# opencv_issue_28525

./: .env.example  .gitignore  .mise.toml  README.md  pyproject.toml
.github/actions/setup-nvidia-libs/: action.yml
.github/workflows/: import-cv2.yml
src/opencv_issue_28525/: __init__.py  __main__.py  tasks.py
